[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/levels/PlayerSpawnZone.gd" type="Script" id=1]
[ext_resource path="res://assets/levelAssets/Checkpoint.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "activated",
"speed": 15.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="PlayerSpawnZone" type="Area2D" groups=["Spawn_Zones"]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="checkpointSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
frames = SubResource( 10 )

[connection signal="body_entered" from="." to="." method="_on_PlayerSpawnZone_body_entered"]
[connection signal="animation_finished" from="checkpointSprite" to="." method="_on_checkpointSprite_animation_finished"]
